--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,6 +10,7 @@ cryptography==44.0.0
 decorator==5.1.1
 Django==5.1.4
 django-debug-toolbar==4.4.6
+django-filter==24.3
 djangorestframework==3.15.2
 exceptiongroup==1.2.2
 executing==2.1.0
