--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,16 @@
+amqp==5.3.1
 asgiref==3.8.1
 asttokens==3.0.0
 autopep8==2.3.1
+billiard==4.2.1
 black @ git+https://github.com/psf/black@8dc912774e322a2cd46f691f19fb91d2237d06e2
+celery==5.4.0
 cffi==1.17.1
 cli_helpers==2.3.1
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 configobj==5.0.9
 cryptography==44.0.0
 decorator==5.1.1
@@ -16,6 +22,7 @@ exceptiongroup==1.2.2
 executing==2.1.0
 ipython==8.31.0
 jedi==0.19.2
+kombu==5.4.2
 matplotlib-inline==0.1.7
 mycli==1.29.2
 mypy-extensions==1.0.0
@@ -36,7 +43,9 @@ pyfzf==0.3.1
 Pygments==2.19.1
 PyMySQL==1.0.2
 pyperclip==1.9.0
+python-dateutil==2.9.0.post0
 pytz==2024.2
+six==1.17.0
 sqlglot==26.1.3
 sqlparse==0.4.4
 stack-data==0.6.3
@@ -44,4 +53,6 @@ tabulate==0.9.0
 tomli==2.2.1
 traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2025.1
+vine==5.1.0
 wcwidth==0.2.13
