--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,7 @@
 amqp==5.3.1
 asgiref==3.8.1
 asttokens==3.0.0
+async-timeout==5.0.1
 autopep8==2.3.1
 billiard==4.2.1
 black @ git+https://github.com/psf/black@8dc912774e322a2cd46f691f19fb91d2237d06e2
@@ -45,6 +46,7 @@ PyMySQL==1.0.2
 pyperclip==1.9.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+redis==5.2.1
 six==1.17.0
 sqlglot==26.1.3
 sqlparse==0.4.4
