can't use django notification package

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,7 +44,7 @@ services:
       - shared_network
 
   celery_worker:
-    container_name: celery_worker
+    container_name: celery
     build: .
     command: celery -A twitter.celery worker --loglevel=info 
     depends_on:
