--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,59 +1,26 @@
 amqp==5.3.1
 asgiref==3.8.1
-asttokens==3.0.0
 async-timeout==5.0.1
-autopep8==2.3.1
 billiard==4.2.1
-black @ git+https://github.com/psf/black@8dc912774e322a2cd46f691f19fb91d2237d06e2
 celery==5.4.0
-cffi==1.17.1
-cli_helpers==2.3.1
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
-configobj==5.0.9
-cryptography==44.0.0
-decorator==5.1.1
-Django==5.1.4
-django-debug-toolbar==4.4.6
-django-filter==24.3
+Django==5.1.6
+django-debug-toolbar==5.0.1
+django-filter==25.1
+django-model-utils==5.0.0
 djangorestframework==3.15.2
-exceptiongroup==1.2.2
-executing==2.1.0
-ipython==8.31.0
-jedi==0.19.2
+jsonfield==3.1.0
 kombu==5.4.2
-matplotlib-inline==0.1.7
-mycli==1.29.2
-mypy-extensions==1.0.0
-mysqlclient==2.2.6
-packaging==24.2
-parso==0.8.4
-pathspec==0.12.1
-pexpect==4.9.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-psutil==6.1.1
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyaes==1.6.1
-pycodestyle==2.12.1
-pycparser==2.22
-pyfzf==0.3.1
-Pygments==2.19.1
-PyMySQL==1.0.2
-pyperclip==1.9.0
+prompt_toolkit==3.0.50
 python-dateutil==2.9.0.post0
-pytz==2024.2
+pytz==2025.1
 redis==5.2.1
 six==1.17.0
-sqlglot==26.1.3
-sqlparse==0.4.4
-stack-data==0.6.3
-tabulate==0.9.0
-tomli==2.2.1
-traitlets==5.14.3
+sqlparse==0.5.3
+swapper==1.4.0
 typing_extensions==4.12.2
 tzdata==2025.1
 vine==5.1.0
